# fuse

./: .gitignore  AGENTS.md  BRANDING.md  CLAUDE.md  PR-REVIEW-COMPANION.md  TODO.md
.superpowers/sdd/: task-1-report.md
docs/: README.md
docs/guides/: developer.md  user-guide.md
docs/plans/: 01-features.md  02-ux-improvements.md  03-ui-design.md  04-features-v2.md  05-performance-optimisation.md  05-ux-improvements-v2.md  06-ui-design-v2.md  07-performance-and-bookmarks.md  (+1 more)
tauri-app/: DEVELOPMENT_LOG.md  README.md  ROADMAP.md  ROADMAP_LOG.md  build.sh  dev.sh  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: branch_policy.rs  lib.rs  main.rs  menu.rs  polling.rs
tauri-app/src-tauri/src/commands/: aggregate.rs  analytics.rs  authors.rs  batch.rs  bookmarks.rs  checklist.rs  checklist_templates.rs  checks.rs  comments.rs  commits.rs  conflict_risk.rs  conflicts.rs  dependencies.rs  deployments.rs  diff.rs  diff_files.rs  digest.rs  editor.rs  filter_presets.rs  groups.rs  grove.rs  handoffs.rs  issues.rs  label_rules.rs  labels.rs  mod.rs  notifications.rs  priority_queue.rs  pull_requests.rs  repositories.rs  review_summary.rs  reviews.rs  sessions.rs  settings.rs  stale.rs  stats.rs  sync.rs  sync_health.rs  templates.rs  time_tracking.rs  (+1 more)
tauri-app/src-tauri/src/db/: migrations.rs  mod.rs
tauri-app/src-tauri/src/github/: mod.rs
tauri-app/src-tauri/src/models/: mod.rs
(+141 files in other folders)
