[package]
name = "fuse"
version = "0.1.0"
description = "Fuse desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "pr_review_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "rt", "sync", "process"] }
tauri-plugin-window-state = "2.4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
